# quran-viewer-bot

./: main.py  pyproject.toml
